RESOLVED FIXED164802
Debugging and other tools should not disable the code cache
https://bugs.webkit.org/show_bug.cgi?id=164802
Summary Debugging and other tools should not disable the code cache
Geoffrey Garen
Reported 2016-11-15 15:35:24 PST
Debugging and other tools should not disable the code cache
Attachments
Patch (9.66 KB, patch)
2016-11-15 15:38 PST, Geoffrey Garen
mark.lam: review+
Geoffrey Garen
Comment 1 2016-11-15 15:38:57 PST
Mark Lam
Comment 2 2016-11-15 15:59:52 PST
Comment on attachment 294889 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=294889&action=review r=me > Source/JavaScriptCore/ChangeLog:18 > + collissions as you open and close the Web Inspector. /collissions/collisions/
Saam Barati
Comment 3 2016-11-15 16:01:30 PST
LGTM too
Geoffrey Garen
Comment 4 2016-11-15 16:23:04 PST
Note You need to log in before you can comment on or make changes to this bug.